# Mandelbrot-Qt

./: CMakeLists.txt  mainwidget.cpp
